# crudini

./: .travis.yml  EXAMPLES  INSTALL  Makefile  NEWS  README  README.md  TODO  circle.yml  crudini  crudini-help  crudini.1  crudini.py  example.ini  noequals.ini  setup.cfg  setup.py  tox.ini
tests/: example.lines  nospace-in.ini  nospace-out.ini  section1.ini  section1.lines  section1.sh  sections.sh  space-in.ini  space-out.ini  test.sh
