[metadata]
name = crudini
author = Pádraig Brady
author_email = P@draigBrady.com
license = GPLv2
version = 0.9.4
description = A utility for manipulating ini files
keywords = ini, config, edit
url = http://github.com/pixelb/crudini
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Utilities
    Topic :: System :: Systems Administration
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3

[options]
install_requires = iniparse>=0.5
py_modules = crudini
setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3

[bdist_wheel]
universal = 1

[options.entry_points]
console_scripts = crudini = crudini:main
